Fixed overlapped shadow by the next item in the list (soldtogehter slider)

--- a/web/css/layout/listing/_products.less
+++ b/web/css/layout/listing/_products.less
@@ -173,6 +173,7 @@
                 @media @media-hover {
                     &:hover,
                     &:focus-within {
+                        z-index: 10;
                         overflow: visible;
                         .lib-css(--listing-grid-item-margin, @listing-grid-item__hover__margin);
                         .lib-css(--listing-grid-item-padding, @listing-grid-item__hover__padding);
